--- a/index.html
+++ b/index.html
@@ -59,8 +59,6 @@
                 const today = new Date();
                 const todayFormatted = today.toLocaleDateString("id-ID").replace(/\./g, '/');
 
-                console.log("Tanggal Hari Ini:", todayFormatted);
-
                 let total = 0;
                 data.values.forEach((row, index) => {
                     if (index === 0) return;
@@ -89,11 +87,8 @@
                     if (normalizedDate === todayFormatted && !isNaN(transactionValue)) {
                         total += transactionValue;
                     }
-
-                    console.log(`Data ke-${index}: Tanggal = ${transactionDate}, Normalized = ${normalizedDate}, Nilai = ${transactionValue}`);
                 });
 
-                console.log("Total transaksi hari ini:", total);
                 document.getElementById("amount").innerText = `Rp ${total.toLocaleString('id-ID')}`;
             } catch (error) {
                 console.error("Error fetching data: ", error);
@@ -115,10 +110,15 @@
 
                 console.log("Data Deposit API:", data.values);
 
-                let lastRow = data.values.length - 1;
-                let lastDeposit = data.values[lastRow][0] ? parseFloat(data.values[lastRow][0].replace(/,/g, '')) : 0;
+                let lastDeposit = 0;
 
-                console.log("Deposit terakhir:", lastDeposit);
+                for (let i = data.values.length - 1; i >= 0; i--) {
+                    if (data.values[i][0] && !isNaN(data.values[i][0].replace(/,/g, ''))) {
+                        lastDeposit = parseFloat(data.values[i][0].replace(/,/g, ''));
+                        break;
+                    }
+                }
+
                 document.getElementById("deposit").innerText = `Rp ${lastDeposit.toLocaleString('id-ID')}`;
             } catch (error) {
                 console.error("Error fetching deposit: ", error);
@@ -156,7 +156,7 @@
     <p>______________________________</p>
     <h2 class="amount" id="amount">Memuat data...</h2>
     <p>______________________________</p>
-    <h2>DEPOSIT:</h2>
+    <h2>Batas Transaksi hari ini:</h2>
     <h2 class="deposit" id="deposit">Memuat data...</h2>
     <p>______________________________</p>
     <p>Nilai transaksi tidak boleh melebihi deposit, konfirmasi owner untuk batasan transaksi per hari</p>
