--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         }
     </style>
     <script>
-        const apiKey = "YOUR_GOOGLE_API_KEY";  // Ganti dengan API Key Anda
+        const apiKey = "AIzaSyCZCnqUu799bOvs4TdGpqA4wnq0KXIvq4A";  // Ganti dengan API Key Anda
 
         const sheetIdTransaksi = "1WRaA_8OTcR42t01CLehqw20ZN0nWB64xSgSEdl54vIY";
         const rangeTransaksi = "DataTransaksi!A:G";
