--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 warningElement.innerText = "⚠️ PERHATIAN: Nilai transaksi mendekati batas.";
             } else {
                 amountElement.style.backgroundColor = "lightgreen";
-                warningElement.innerText = "✅ Aman:" "<P>Transaksi masih dalam batas aman.</P>";
+                warningElement.innerText = "✅ Transaksi dalam batas Aman.";
             }
         }
 
