--- a/index.html
+++ b/index.html
@@ -1,7 +1,3 @@
-Untuk menampilkan total transaksi harian pada tanggal tertentu, Anda perlu memastikan bahwa data transaksi Anda mencakup informasi tanggal. Misalnya, jika kolom tanggal berada di kolom A dan nilai transaksi berada di kolom G, Anda dapat memodifikasi kode JavaScript Anda untuk menjumlahkan nilai transaksi yang sesuai dengan tanggal hari ini.
-
-Berikut adalah contoh kode lengkap yang telah disesuaikan:
-
 <!DOCTYPE html>
 <html lang="id">
 <head>
@@ -45,13 +41,15 @@ Berikut adalah contoh kode lengkap yang telah disesuaikan:
         }
     </style>
     <script>
-        const apiKey = "API_KEY_ANDA";
-        const sheetIdTransaksi = "ID_SHEET_TRANSAKSI";
+        const apiKey = "AIzaSyCZCnqUu799bOvs4TdGpqA4wnq0KXIvq4AA"; // Ganti dengan API Key Anda
+
+        const sheetIdTransaksi = "1WRaA_8OTcR42t01CLehqw20ZN0nWB64xSgSEdl54vIY";
         const rangeTransaksi = "DataTransaksi!A:G"; // Asumsikan kolom A untuk tanggal dan kolom G untuk nilai transaksi
-        const sheetIdDeposit = "ID_SHEET_DEPOSIT";
+
+        const sheetIdDeposit = "10MFUJkGrlBhlDt4dQMGRMA8KHmxoG3tFJ2JmLyLncCI";
         const rangeDeposit = "PunokawanTransaksi!C:C";
 
-        let totalTransaksiHariIni = 0;
+        let totalTransaksi = 0;
         let depositValue = 0;
 
         async function fetchData() {
@@ -68,23 +66,23 @@ Berikut adalah contoh kode lengkap yang telah disesuaikan:
                     return;
                 }
 
-                const today = new Date().toLocaleDateString("id-ID");
-                totalTransaksiHariIni = 0;
+                const today = new Date().toLocaleDateString('id-ID');
+                totalTransaksi = 0;
 
                 data.values.forEach(row => {
                     const [tanggal, , , , , , nilaiTransaksi] = row;
                     if (tanggal && nilaiTransaksi) {
-                        const tanggalTransaksi = new Date(tanggal).toLocaleDateString("id-ID");
+                        const tanggalTransaksi = new Date(tanggal).toLocaleDateString('id-ID');
                         if (tanggalTransaksi === today) {
-                            const transactionValue = parseFloat(nilaiTransaksi.replace(/,/g, ''));
+                            const transactionValue = parseFloat(nilaiTransaksi.replace(/,/g, '') || 0);
                             if (!isNaN(transactionValue)) {
-                                totalTransaksiHariIni += transactionValue;
+                                totalTransaksi += transactionValue;
                             }
                         }
                     }
                 });
 
-                document.getElementById("amount").innerText = `Rp ${totalTransaksiHariIni.toLocaleString('id-ID')}`;
+                document.getElementById("amount").innerText = `Rp ${totalTransaksi.toLocaleString('id-ID')}`;
                 updateWarning();
             } catch (error) {
                 console.error("Error fetching data: ", error);
@@ -106,7 +104,7 @@ Berikut adalah contoh kode lengkap yang telah disesuaikan:
                     return;
                 }
 
-                const lastDeposit = data.values.reverse().find(row => !isNaN(parseFloat(row[0])));
+                let lastDeposit = data.values.reverse().find(row => !isNaN(parseFloat(row[0])));
                 depositValue = lastDeposit ? parseFloat(lastDeposit[0]) : 0;
 
                 document.getElementById("deposit").innerText = `Rp ${depositValue.toLocaleString('id-ID')}`;
@@ -127,10 +125,10 @@ Berikut adalah contoh kode lengkap yang telah disesuaikan:
                 return;
             }
 
-            if (totalTransaksiHariIni > depositValue) {
+            if (totalTransaksi > depositValue) {
                 amountElement.style.backgroundColor = "red";
                 warningElement.innerText = "⚠️ PERINGATAN: Nilai transaksi MELEBIHI batas!";
-            } else if (totalTransaksiHariIni >= depositValue * 0.8) {
+            } else if (totalTransaksi >= depositValue * 0.8) {
                 amountElement.style.backgroundColor = "yellow";
                 warningElement.innerText = "⚠️ PERHATIAN: Nilai transaksi mendekati batas.";
             } else {
@@ -168,9 +166,12 @@ Berikut adalah contoh kode lengkap yang telah disesuaikan:
     </div>
     <p>______________________________</p>
     <h2 class="amount" id="amount">Memuat data...</h2>
-    <p id="warning" class="warning">Menunggu data...</p>
+    <p id="warning class="warning">Menunggu data...</p>
     <p>______________________________</p>
     <h4>BATAS TRANSAKSI HARIAN:</h4>
     <h4 class="deposit" id="deposit">Memuat data...</h4>
-    <p>________________0
-
+    <p>______________________________</p>
+    <p>Nilai transaksi tidak boleh melebihi deposit, konfirmasi owner untuk batasan transaksi per hari</p>
+    <p class="footer"><i>Design By PIGOLD 2025</i></p>
+</body>
+</html>
