--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         const apiKey = "AIzaSyCZCnqUu799bOvs4TdGpqA4wnq0KXIvq4A";
 
         const sheetIdTransaksi = "1WRaA_8OTcR42t01CLehqw20ZN0nWB64xSgSEdl54vIY";
-        const rangeTransaksi = "DataTransaksi!A:G"; // Sesuaikan dengan rentang data Anda
+        const rangeTransaksi = "DataTransaksi!G:G";
 
         const sheetIdDeposit = "10MFUJkGrlBhlDt4dQMGRMA8KHmxoG3tFJ2JmLyLncCI";
         const rangeDeposit = "PunokawanTransaksi!C:C";
@@ -66,19 +66,11 @@
                     return;
                 }
 
-                const today = new Date().toLocaleDateString("id-ID");
                 totalTransaksi = 0;
-
                 data.values.forEach(row => {
-                    const [tanggal, , , , , , jumlah] = row;
-                    if (tanggal && jumlah) {
-                        const tanggalTransaksi = new Date(tanggal).toLocaleDateString("id-ID");
-                        if (tanggalTransaksi === today) {
-                            const transactionValue = parseFloat(jumlah.replace(/,/g, '') || 0);
-                            if (!isNaN(transactionValue)) {
-                                totalTransaksi += transactionValue;
-                            }
-                        }
+                    let transactionValue = parseFloat(row[0]?.replace(/,/g, '') || 0);
+                    if (!isNaN(transactionValue)) {
+                        totalTransaksi += transactionValue;
                     }
                 });
 
@@ -166,7 +158,7 @@
     </div>
     <p>______________________________</p>
     <h2 class="amount" id="amount">Memuat data...</h2>
-    <p id="warning class="warning">Menunggu data...</p>
+    <p id="warning" class="warning">Menunggu data...</p>
     <p>______________________________</p>
     <h4>BATAS TRANSAKSI HARIAN:</h4>
     <h4 class="deposit" id="deposit">Memuat data...</h4>
