--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
             background-color: lightgray;
         }
         .deposit {
-            font-size: 24px;
+            font-size: 20px;
             font-weight: bold;
-            color: darkblue;
+            color: red;
         }
         .warning {
             font-size: 20px;
@@ -42,18 +42,15 @@
     </style>
     <script>
         const apiKey = "AIzaSyCZCnqUu799bOvs4TdGpqA4wnq0KXIvq4A";
+
         const sheetIdTransaksi = "1WRaA_8OTcR42t01CLehqw20ZN0nWB64xSgSEdl54vIY";
-        const rangeTransaksi = "DataTransaksi!A:G"; // Ambil kolom transaksi (G) dan tanggal (H)
+        const rangeTransaksi = "DataTransaksi!A:G";
+
         const sheetIdDeposit = "10MFUJkGrlBhlDt4dQMGRMA8KHmxoG3tFJ2JmLyLncCI";
         const rangeDeposit = "PunokawanTransaksi!C:C";
 
         let totalTransaksi = 0;
         let depositValue = 0;
-
-        function getTodayDate() {
-            const now = new Date();
-            return now.toLocaleDateString("id-ID"); // Format: "20/03/2025"
-        }
 
         async function fetchData() {
             const url = `https://sheets.googleapis.com/v4/spreadsheets/${sheetIdTransaksi}/values/${rangeTransaksi}?key=${apiKey}`;
@@ -63,31 +60,21 @@
                 if (!response.ok) throw new Error(`Error ${response.status}: ${response.statusText}`);
                 
                 const data = await response.json();
+
                 if (!data.values || data.values.length === 0) {
                     document.getElementById("amount").innerText = "Data tidak ditemukan";
                     return;
                 }
 
-                const today = getTodayDate();
                 totalTransaksi = 0;
-                let transaksiHariIni = false;
-
                 data.values.forEach(row => {
                     let transactionValue = parseFloat(row[0]?.replace(/,/g, '') || 0);
-                    let transactionDate = row[1]?.trim();
-
-                    if (transactionDate === today && !isNaN(transactionValue)) {
+                    if (!isNaN(transactionValue)) {
                         totalTransaksi += transactionValue;
-                        transaksiHariIni = true;
                     }
                 });
 
-                if (!transaksiHariIni) {
-                    document.getElementById("amount").innerText = "Tidak ada transaksi hari ini";
-                } else {
-                    document.getElementById("amount").innerText = `Rp ${totalTransaksi.toLocaleString('id-ID')}`;
-                }
-
+                document.getElementById("amount").innerText = `Rp ${totalTransaksi.toLocaleString('id-ID')}`;
                 updateWarning();
             } catch (error) {
                 console.error("Error fetching data: ", error);
@@ -103,6 +90,7 @@
                 if (!response.ok) throw new Error(`Error ${response.status}: ${response.statusText}`);
                 
                 const data = await response.json();
+
                 if (!data.values || data.values.length === 0) {
                     document.getElementById("deposit").innerText = "Deposit tidak ditemukan";
                     return;
@@ -131,13 +119,13 @@
 
             if (totalTransaksi > depositValue) {
                 amountElement.style.backgroundColor = "red";
-                warningElement.innerText = "⚠️ PERINGATAN: Nilai transaksi MELEBIHI deposit!";
+                warningElement.innerText = "⚠️ PERINGATAN: Nilai transaksi MELEBIHI batas!";
             } else if (totalTransaksi >= depositValue * 0.8) {
                 amountElement.style.backgroundColor = "yellow";
-                warningElement.innerText = "⚠️ PERHATIAN: Nilai transaksi mendekati batas deposit.";
+                warningElement.innerText = "⚠️ PERHATIAN: Nilai transaksi mendekati batas.";
             } else {
                 amountElement.style.backgroundColor = "lightgreen";
-                warningElement.innerText = "✅ Aman: Transaksi masih dalam batas deposit.";
+                warningElement.innerText = "✅ Transaksi dalam batas Aman.";
             }
         }
 
@@ -172,8 +160,8 @@
     <h2 class="amount" id="amount">Memuat data...</h2>
     <p id="warning" class="warning">Menunggu data...</p>
     <p>______________________________</p>
-    <h2>DEPOSIT:</h2>
-    <h2 class="deposit" id="deposit">Memuat data...</h2>
+    <h4>BATAS TRANSAKSI HARIAN:</h4>
+    <h4 class="deposit" id="deposit">Memuat data...</h4>
     <p>______________________________</p>
     <p>Nilai transaksi tidak boleh melebihi deposit, konfirmasi owner untuk batasan transaksi per hari</p>
     <p class="footer"><i>Design By PIGOLD 2025</i></p>
