--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <script>
         const apiKey = "AIzaSyCZCnqUu799bOvs4TdGpqA4wnq0KXIvq4A";
         const sheetIdTransaksi = "1WRaA_8OTcR42t01CLehqw20ZN0nWB64xSgSEdl54vIY";
-        const rangeTransaksi = "DataTransaksi!G:A"; // Ambil kolom transaksi (G) dan tanggal (H)
+        const rangeTransaksi = "DataTransaksi!A:G"; // Ambil kolom transaksi (G) dan tanggal (H)
         const sheetIdDeposit = "10MFUJkGrlBhlDt4dQMGRMA8KHmxoG3tFJ2JmLyLncCI";
         const rangeDeposit = "PunokawanTransaksi!C:C";
 
